# RayTracer

./: .gitignore  CMakeLists.txt  Readme.org
cmake/util/: Prepend.cmake
doxygen/: Doxyfile
src/: CMakeLists.txt  camera.cpp  camera.hpp  color.hpp  film.cpp  film.hpp  imageExportor.cpp  imageExportor.hpp  main.cpp  ray.hpp  raytracer.cpp  raytracer.hpp
src/math/: CMakeLists.txt  math.hpp
src/parser/: CMakeLists.txt  fileparser.cpp  fileparser.hpp
src/rendering/: CMakeLists.txt  material.cpp  material.hpp  phongilluminationinfo.cpp  phongilluminationinfo.hpp
src/rendering/shader/: CMakeLists.txt  blinnphongshader.cpp  blinnphongshader.hpp  shader.hpp
src/sampler/: CMakeLists.txt  sample.hpp  sampler.cpp  sampler.hpp
src/scene/: CMakeLists.txt  hit.cpp  hit.hpp  light.hpp  localgeometry.cpp  localgeometry.hpp  scene.cpp  scene.hpp  sceneobject.cpp  sceneobject.hpp
src/scene/light/: CMakeLists.txt  light.hpp  pointlight.cpp  pointlight.hpp
src/scene/primitives/: CMakeLists.txt  primitive.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
test/: CMakeLists.txt  cameratest.cpp  colortest.cpp  filmtest.cpp  test.cpp  triangletest.cpp
